--- a/gentrym1_OriginalHomeworkCode_05.qmd
+++ b/gentrym1_OriginalHomeworkCode_05.qmd
@@ -1,18 +1,26 @@
 ---
 title: "Boots!"
 author: "Gentry M"
-format: html
+format: 
+  html:
+    theme: cayman
+    toc: true
+    toc-depth: 2
+    toc-location: left
+    df-print: kable
+    style: css
 editor: visual
 ---
 
 ### Bootstrapping Standard Errors and CIs for Linear Models.
 
-When we initially discussed the central limit theorem and confidence intervals, we showed how we could use bootstrapping to estimate standard errors and confidence intervals around certain parameter values, like the mean. Using bootstrapping, we could also do the same for estimating standard errors and CIs around regression parameters, such as ββ coefficients.
+When we initially discussed the central limit theorem and confidence intervals, we showed how we could use bootstrapping to estimate standard errors and confidence intervals around certain parameter values, like the mean. Using bootstrapping, we could also do the same for estimating standard errors and CIs around regression parameters, such as β coefficients.
 
-\[1\] Using the “KamilarAndCooperData.csv” dataset, run a linear regression looking at log(HomeRange_km2) in relation to log(Body_mass_female_mean) and report your ββ coeffiecients (slope and intercept).
+\[1\] Using the “KamilarAndCooperData.csv” dataset, run a linear regression looking at log(HomeRange_km2) in relation to log(Body_mass_female_mean) and report your coeffiecients (slope and intercept).
 
 ```{r}
 #| label: Packages and Data
+#| message: false
 
 library(curl)
 library(manipulate)
@@ -23,6 +31,7 @@ library(tidyverse)
 
 d <- curl("https://raw.githubusercontent.com/fuzzyatelin/fuzzyatelin.github.io/refs/heads/master/AN588_Spring25/KamilarAndCooperData.csv")
 df <- read.csv(d, header = TRUE, sep = ",", stringsAsFactors = FALSE)
+head(df)
 ```
 
 ```{r}
@@ -70,16 +79,13 @@ list(SE = boot_se, CI = boot_ci)
 
 ```{r}
 #| label: Comparing SEs and CIs
+#| code-fold: true
 
-print("LM SE:")
-summary(m1)$coefficients[, "Std. Error"]
-print("Bootstraps SE:")
-boot_se
+"LM SE:"; summary(m1)$coefficients[, "Std. Error"]
+"Bootstraps SE:"; boot_se
 
-print("LM CI:")
-confint(m1)
-print("Bootstraps CI: ")
-boot_ci
+"LM CI:"; confint(m1)
+"Bootstraps CI:"; boot_ci
 ```
 
 -   How does the latter compare to the 95% CI estimated from your entire dataset?
@@ -91,7 +97,7 @@ boot_ci
 Write a FUNCTION that takes as its arguments a dataframe, “d”, a linear model, “m” (as a character string, e.g., “logHR\~logBM”), a user-defined confidence interval level, “conf.level” (with default = 0.95), and a number of bootstrap replicates, “n” (with default = 1000). Your function should return a dataframe that includes: beta coefficient names; beta coefficients, standard errors, and upper and lower CI limits for the linear model based on your entire dataset; and mean beta coefficient estimates, SEs, and CI limits for those coefficients based on your bootstrap.
 
 ```{r}
-#| label: Bonus 1: Function
+#| label: Bonus 1 Function
 
 boots_model <- function(d, m, conf.level = 0.95, n = 1000){
   # convert string to formula
@@ -129,7 +135,8 @@ colnames(boot_df) <- model_sm$term
 Graph each beta value from the linear model and its corresponding mean value, lower CI and upper CI from a bootstrap as a function of number of bootstraps from 10 to 200 by 10s. HINT: the beta value from the linear model will be the same for all bootstraps and the mean beta value may not differ that much!
 
 ```{r}
-#| label: Bonus 2: Graphing
+#| label: Bonus 2 Graphing
+#| code-fold: true
 
 boots <- seq(10, 200, by = 10)
 slope_est <- map_df(boots, function(n) {
